# ATS

./: .env  .gitattributes  .gitignore  DB.py  Makefile  README.md  config.py  main.py  pyproject.toml  setup_db.py
alembic/: env.py
alembic/versions/: 789894c92df0_create_all.py
ats/: crud.py  dependencies.py  enums.py  exceptions.py  middlewares.py  parsers.py  security.py  utils.py
ats/models/: candidates.py  users.py
ats/routers/: admin.py  auth.py  candidates.py  jobs.py
database/: db.py  models.py  queries.py  schemas.py  seed.py
traefik/: routes.toml  traefik  traefik.toml
